--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit Card Form</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./main.js"></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./favicon_io.zip">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -19,11 +23,14 @@
     <a href="./index.html">Go to Credit Card Form</a>
 
     <div class="container">
-        <form>
+        <form id="credit-card-form">
+            <!-- Card Container -->
             <div class="card">
+                <!-- Card Front -->
                 <div class="card-front">
                     <img class="card-image" src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA..."
                         height="55px">
+
                     <label for="card-number">Card Number</label>
                     <input type="text" id="card-number" name="card-number" placeholder="1234 5678 9012 3456" required
                         pattern="[0-9]{16}">
@@ -35,16 +42,19 @@
                     <input type="month" id="expiry" name="expiry" required>
                 </div>
 
+                <!-- Card Back -->
                 <div class="card-back">
                     <label for="cvv">CVV</label>
                     <input type="password" id="cvv" name="cvv" placeholder="123" required pattern="[0-9]{3}">
                 </div>
             </div>
 
+            <!-- Submit Button -->
             <button type="submit">Submit</button>
         </form>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
